added docker deploy with compose, added nginx configuration and much more (added custom preload for gworkers, fix tests, fix process termination for celery worker, added manage.py command to upload recordings)

--- a/.gitignore
+++ b/.gitignore
@@ -9,8 +9,8 @@
 !**/migrations
 !**/migrations/__init__.py
 
+**/static/admin
 **/static/assets/images
-**/static/assets/css/style.css
 **/media/
 
 **/*.sqlite3
