--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -30,7 +30,7 @@ server {
         proxy_cache_valid 200 302 1m;
 
 
-        proxy_pass https://portainer-app;
+        proxy_pass http://portainer-app;
     }
 
 }
