mv .yaml to .yml

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,3 +1,11 @@
 **/.coverage
 **/db.sqlite3
 **/celerybeat-schedule
+
+**/migrations/**
+!**/migrations
+!**/migrations/__init__.py
+
+**/static/admin
+**/static/assets/images
+**/media/
