added docker volume, comment silk calling, fix send task to process

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -49,8 +49,8 @@ services:
       - .docker.broker.env
       - .docker.env
     volumes:
-#      - recording-files-volume:/usr/src/app/RepackingProject/files
-      - ./RepackingProject/files:/usr/src/app/RepackingProject/files
+      - recording-files-volume:/usr/src/app/RepackingProject/files
+#      - ./RepackingProject/files:/usr/src/app/RepackingProject/files
 
   celery-worker-2:
     build:
