--- a/docker-compose.certbot.yml
+++ b/docker-compose.certbot.yml
@@ -3,7 +3,7 @@ version: "3"
 services:
   nginx:
     restart: always
-    image: nginx
+    image: nginx:1.29
     ports:
       - "80:80"
     volumes:
