--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -88,6 +88,7 @@ services:
 
   flower:
     image: mher/flower:0.9.7
+    restart: unless-stopped
     command: ["flower", "--port=5555", "--url_prefix=flower"]
     env_file:
       - .docker.flower.env
